# fastapi-sentiment

./: .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  debug_migration.py  download_corpora.py  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 499d711cf3e4_create_messages_table.py  a621e7bc45f1_create_messages_table.py  d892a1501b63_create_messages_table.py  e061c796af18_manual_revision_test.py  edf7d957bbd8_split_score_positive_negative.py  ee42a18a3a7d_add_created_at_to_messages.py  f2d68ecbf7ed_add_language_column_to_messages.py
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: sentiment.py
app/db/: __init__.py  db.py  migrate.py
app/models/: __init__.py  models.py
app/services/: cleanup.py  sentiment.py
tests/: conftest.py  test_sentiment.py
utils/: create_tables.py
