[tool.poetry]
authors = ["Elmano Neto <elmanoneto@gmail.com>"]
description = "API para análise de sentimentos com FastAPI, VADER e tradução automática."
name = "fastapi-sentiment"
package-mode = false
readme = "README.md"
requires-python = "^3.13"
version = "0.1.0"

[tool.poetry.dependencies]
deep-translator = "^1.11.4"
fastapi = "^0.115.2"
python-dotenv = "^1.1.0"
textblob = "^0.19.0"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
vadersentiment = "^3.3.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
