[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.8.0"]

[project]
authors = [
  {name = "Elmano Neto", email = "elmanoneto@gmail.com"},
]
description = "API para análise de sentimentos com FastAPI, VADER e tradução automática"
name = "fastapi-sentiment"
readme = "README.md"
requires-python = ">=3.9,<3.13"
version = "0.1.0"

dependencies = [
  "fastapi>=0.115.2,<0.116.0",
  "uvicorn[standard]>=0.34.2,<0.35.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "textblob>=0.19.0,<0.20.0",
  "vadersentiment>=3.3.2,<4.0.0",
  "deep-translator>=1.11.4,<2.0.0",
  "sqlalchemy (>=2.0.41,<3.0.0)",
  "psycopg2-binary (>=2.9.10,<3.0.0)",
  "alembic (>=1.15.2,<2.0.0)",
  "langdetect (>=1.0.9,<2.0.0)",
]

[tool.poetry.group.dev.dependencies]
alembic = "^1.15.2"
black = "^25.1.0"
flake8 = "^7.2.0"
httpx = "^0.28.1"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"

[tool.poetry]
authors = ["Elmano Neto <elmanoneto@gmail.com>"]
description = "API de análise de sentimento com FastAPI"
name = "fastapi-sentiment"
package-mode = false
version = "0.1.0"

[tool.isort]
profile = "black"
skip = ["alembic/"]
